功能完善，等待进一步优化css

--- a/web/main.html
+++ b/web/main.html
@@ -139,8 +139,8 @@
                 <div class="game-header">
                     <div class="current-player-info">
                         <h2>
-                            🎮 回合 <span id="turn-number">1</span> | 
-                            当前玩家: <span id="current-player-name"></span>
+                            🎮 轮次 <span id="turn-number">1</span> | 
+                            当前行动: <span id="current-player-name"></span>
                         </h2>
                         <div style="margin-top: 8px; font-size: 0.9em; opacity: 0.8;">
                             胜利目标: <span id="victory-goal">-</span>分 | 
