--- a/web/main.html
+++ b/web/main.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
     <title>🌟 璀璨宝石宝可梦 🌟</title>
     <link rel="stylesheet" href="/static/css/style.css">
 </head>
