修复了两个bug：【放回球多次页面弹出】+【购买Lv4/5最后一张还会显示】

--- a/web/main.html
+++ b/web/main.html
@@ -284,6 +284,12 @@
             <button id="close-debug-btn" class="btn btn-small btn-danger">✕</button>
         </div>
         <div class="debug-panel-body">
+            <!-- 调整分数 -->
+            <div class="debug-section">
+                <h4>🏆 调整分数</h4>
+                <div class="debug-score-control" id="debug-score-control"></div>
+            </div>
+
             <!-- 添加球 -->
             <div class="debug-section">
                 <h4>🎨 添加持有球</h4>
